--- a/sky-take-out(backend)/sky-server/src/main/resources/application-dev.yml
+++ b/sky-take-out(backend)/sky-server/src/main/resources/application-dev.yml
@@ -6,6 +6,14 @@ sky:
     database: sky_take_out
     username: root
     password: root
+  alioss:
+    endpoint:
+    access-key-id:
+    access-key-secret:
+    bucket-name:
   redis:
     host: localhost
     password: 123456
+  wechat:
+    appid:
+    secret:
